Fix 'Tab' indicator alignment if there is no detail section

--- a/client/search-ui/src/input/CodeMirrorQueryInput.module.scss
+++ b/client/search-ui/src/input/CodeMirrorQueryInput.module.scss
@@ -126,13 +126,13 @@
                     }
 
                     .tabStyle {
-                        align-items: center;
                         border: 1px solid var(--text-muted);
                         border-radius: 0.25rem;
                         height: 1.25rem;
                         font-size: 0.65rem;
                         line-height: 1;
                         padding: 0.25rem 0.375rem;
+                        margin-left: auto;
                         color: var(--text-muted);
                         opacity: 0.75;
                         display: none;
